syntax = "proto3";

package Proto;

option java_multiple_files=true;
option java_package="com.example.InventoryService";

message ProtoMsg {
    repeated ProtoProductItem productItems = 1;
    optional string infoError = 2;
    optional int32 httpCode = 3;

    message ProtoProductItem {
        optional string code = 1;
        optional int32 quantity = 2;
    }
}

service ProtoInventoryService {
    rpc order (ProtoMsg) returns (ProtoMsg);
}